FTP, ABX-3L-V2, misc updates

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,24 @@ contact-main: yes
       <!-- Sales Tab Content -->
       <div role="tabpanel" class="tab-pane active" id="sales-tab">
         <div class="row">
+          <!-- E-mail Us -->
+          <div class="col-sm-4 contact-method">
+            <h2><i class="fa fa-envelope"></i><br/>Email Us</h2>
+            <hr> 
+            <!--**** HubSpot contact form ****-->
+            <!--[if lte IE 8]>
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+            <![endif]-->
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+              hbspt.forms.create({
+                portalId: '1875880',
+                formId: '4ebf2c10-379c-4fc6-92f0-c8b9f82d93e7'
+              });
+            </script>
+            <!--**** End HubSpot contact form ****-->
+          </div> 
+          <!-- Locations -->
           <div class="col-sm-4 contact-method">
             <h2>
             <i class="fa fa-map-marker"></i><br/>Locations</h2>
@@ -62,28 +80,107 @@ contact-main: yes
               <a href="/europe">View details</a></p>
             <h3>Netherlands</h3>
             <p>
+              <i class="fa fa-star" st></i> <em>Rental Location</em> <i class="fa fa-star" st></i><br>
               +31 8590 27370<br/>
               <a href="/netherlands">View details</a></p>
           </div>
-          <!-- E-mail Us -->
+          <!-- Reps -->
           <div class="col-sm-4 contact-method">
-            <h2><i class="fa fa-envelope"></i><br/>Email Us</h2>
-            <hr> 
-            <!--**** HubSpot contact form ****-->
-            <!--[if lte IE 8]>
-            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-            <![endif]-->
-            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-            <script>
-              hbspt.forms.create({
-                portalId: '1875880',
-                formId: '4ebf2c10-379c-4fc6-92f0-c8b9f82d93e7'
-              });
-            </script>
-            <!--**** End HubSpot contact form ****-->
-            
-          </div> 
-          <!-- Social Share-->
+            <h2>
+            <i class="fa fa-user"></i><br/>Regional Reps</h2>
+            <hr>
+            <div style="max-height: 550px; overflow-y:scroll;">
+              <h3 style="margin-top:0;">Asia - Northern</h3>
+              <p>Sword Zhou | +1 (778) 865-5224<br/>
+                <a href="mailto:sword.zhou@stoneagetools.com">sword.zhou@stoneagetools.com</a>
+              </p>
+              <h3>Asia - Southeast</h3>
+              <p>Randolph Briggs | +971 5 6832 7196<br/>
+                <a href="mailto:Randolph.Briggs@stoneagetools.com">randolph.briggs@stoneagetools.com</a>
+              </p>
+              <h3>Canada - East</h3>
+              <p>Sean Baker | +1 (440) 661-0022<br/>
+                <a href="mailto:Sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a>
+              </p>
+              <h3>Canada - West</h3>
+              <p>Mike Johnson | +1 (970) 769-1448<br/>
+                <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a>
+              </p>
+              <h3>Central America</h3>
+              <p>Alan Charles | +1 (720) 219-0777<br/>
+                <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a>
+              </p>
+              <h3>India</h3>
+              <p>Vishal Trivedi | +91-98-11-007-501<br/>
+                <a href="mailto:vishal.trivedi@stoneagetools.com">vishal.trivedi@stoneagetools.com</a>
+              </p>
+              <h3>Europe - Benelux</h3>
+              <p>Jan van der Wal | +31 6 50 63 50 90<br/>
+                <a href="mailto:jan.vanderwal@stoneagetools.com">jan.vanderwal@stoneagetools.com</a>
+              </p>
+              <h3>Europe - France</h3>
+              <p>Jean-Baptiste Ternoy<br/>+44 (0)1684 892065<br/>
+                <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a>
+              </p>
+              <h3>Europe - France</h3>
+              <p>Alain Dessonnaz<br/>+33 755 60 00 20<br/>
+                <a href="mailto:Alain.Dessonnaz@stoneagetools.com">alain.dessonnaz@stoneagetools.com</a>
+              </p>
+              <h3>Europe - Germany</h3>
+              <p>Lukasz Wawrzyniak<br/>+49 (0)151 16805010<br/>
+                <a href="mailto:Lukasz.Wawrzyniak@stoneagetools.com">lukasz.wawrzyniak@stoneagetools.com</a>
+              </p>
+              <h3>Europe - UK</h3>
+              <p>Andrew Birt | +44 7788 926261<br/>
+                <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@stoneagetools.com</a>
+              </p>
+              <h3>Middle East</h3>
+              <p>Randolph Briggs | +971 5 6832 7196<br/>
+                <a href="mailto:Randolph.Briggs@stoneagetools.com">randolph.briggs@stoneagetools.com</a>
+              </p>
+              <h3>Russian Federation</h3>
+              <p>Alan Charles | +1 (720) 219-0777<br/>
+                <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a>
+              </p>
+              <h3>South America</h3>
+              <p>Alan Charles | +1 (720) 219-0777<br/>
+                <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a>
+              </p>
+              <h3>South America - Brazil</h3>
+              <p>Marcelo Correa | +55 (21) 3437-1970<br/>
+                <a href="mailto:marcelo.correa@stoneagetools.com">marcelo.correa@stoneagetools.com</a>
+              </p>
+              <h3>South Pacific</h3>
+              <p>Randolph Briggs | +971 5 6832 7196<br/>
+                <a href="mailto:Randolph.Briggs@stoneagetools.com">randolph.briggs@stoneagetools.com</a>
+              </p>
+              <h3>USA - Central</h3>
+              <p>Bill O'Briant | +1 (713) 373-1248<br/>
+                <a href="mailto:bill.obriant@stoneagetools.com">bill.obriant@stoneagetools.com</a>
+              </p>
+              <h3>USA - Midwest</h3>
+              <p>Sean Baker | +1 (440) 661-0022<br/>
+                <a href="mailto:Sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a>
+              </p>
+              <h3>USA - Southeast</h3>
+              <p>Bradley Coble | +1 (409) 239-9165<br/>
+                <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a>
+              </p>
+              <h3>USA - Warthog</h3>
+              <p>Anne Brennan | +1 (970) 426-4243<br/>
+                <a href="mailto:anne.brennan@stoneagetools.com">anne.brennan@stoneagetools.com</a>
+              </p>
+              <h3>USA - Warthog</h3>
+              <p>Frank Ligori | +1 (815) 674-9253<br/>
+                <a href="mailto:frank.ligori@stoneagetools.com">frank.ligori@stoneagetools.com</a>
+              </p>
+              <h3>USA - West Coast</h3>
+              <p>Mike Johnson | +1 (970) 769-1448<br/>
+                <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a>
+              </p>
+            </div>
+          </div>
+          <!-- Social Share
           <div class="col-sm-4 contact-method">
             <h2><i class="fa fa-share-alt"></i><br/>Share With us</h2>
             <hr>
@@ -97,7 +194,7 @@ contact-main: yes
               <a href="https://play.google.com/store/apps/details?id=com.bf.app6d94cd" target="_blank"><img src="/assets/img/thumb/google-play-badge.png" class="img-responsive" alt="Download StoneAge mobile app from Google Play" style="max-width:200px;"></a>
               </div>
             </div>
-          </div> 
+          </div> -->
         </div>
       </div>
       
