--- a/manuals.html
+++ b/manuals.html
@@ -694,7 +694,7 @@ permalink: /manuals
           </table>
         </div>
         
-        <!-- Legacy tab -->
+        <!-- Discontinued/Legacy tab -->
         <div role="tabpanel" class="tab-pane container" id="legacy-tab">
           <div class="row">
             <div class="col-sm-3 pull-right info-table-filter">
@@ -722,6 +722,12 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td>ABX-3L</td>
+                <td>AUTOBOX ABX-3L - Version 1
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-3L.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>ABX-500</td>
                 <td>AUTOBOX ABX-500 - Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em></td>-->
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
@@ -740,10 +746,22 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td>BC 405</td>
+                <td>Cartrige seal for Barracuda rotary shotgun tools</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BC_405.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>BHK</td>
                 <td>Blackhawk concrete hydro-demolition system</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BHK-100_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BHK.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>BNS</td>
+                <td>Shrouded Banshee</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/bns13_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BNS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BRLM</td>
