--- a/loc-europe.html
+++ b/loc-europe.html
@@ -61,7 +61,7 @@ contact-uk: yes
           <div class="col-sm-6">
             <p><strong>Karen Birt</strong><br/>
               Operations Manager<br/>
-              Main: +44 (0) 1684 892065<br/>
+              Office: +44 (0) 1684 892065<br/>
               <a href="mailto:karen.birt@stoneagetools.com">karen.birt@stoneagetools.com</a></p>
           </div>
         </div>
@@ -92,9 +92,18 @@ contact-uk: yes
           <div class="col-sm-6">
             <p><strong>Jean-Baptiste Ternoy</strong>
             <br/>Sales Manager France<br/>
-              Main: +44 (0) 1684 892065<br/>
+              Office: +44 (0) 1684 892065<br/>
               Mobile: +33 771 01 74 43<br />
               <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Alain Dessonnaz</strong>
+            <br/>Sales Manager France<br/>
+              Office: +44 (0) 1684 892065<br/>
+              Mobile: +33 755 60 00 20<br />
+              <a href="mailto:Alain.Dessonnaz@stoneagetools.com">alain.dessonnaz@stoneagetools.com</a></p>
           </div>
         </div>
 
