--- a/loc-nl.html
+++ b/loc-nl.html
@@ -44,7 +44,7 @@ contact-nl: yes
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
-          <h2>NOW OPEN FOR BUSINESS! Grand Opening November 2018</h2>
+          <h2>NOW OPEN FOR BUSINESS! Grand Opening 1 October 2018</h2>
           <p style="font-size:120%;">StoneAge Netherlands is a full-service facility offering equipment sales, rentals, repairs, training, and support.</p>
           <p style="font-size:120%;">StoneAge Netherlands' primary service area includes the Benelux region, Austria, and Germany. International service inquiries can also be facilitated by <a href="/europe">StoneAge Europe, UK.</a></p>       
         </div>
