ABX-3L misc updates

--- a/manuals.html
+++ b/manuals.html
@@ -74,8 +74,8 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_Belt_Installation.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
               </tr>
               <tr>
-                <td><a href="/abx-3l">ABX-3L</a><br></td>
-                <td>AUTOBOX ABX-3L<br>Automated system for triple flex lancing of exchanger tube IDs</td>
+                <td><a href="/abx-3l">ABX-3L-V2</a><br></td>
+                <td>AUTOBOX ABX-3L-V2<br>Automated system for triple flex lancing of exchanger tube IDs</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
