msc updates around SANL opening

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ landing: yes
 <div class="master-slider ms-skin-default" id="homeslider">
   
   <!-- new slide -->
-  <div class="ms-slide">
+  <div class="ms-slide slide-1">
     <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/>  
 
     <div class="ms-layer feature-h1" style="width:400px;"
@@ -67,7 +67,7 @@ landing: yes
   <!-- end of slide -->
   
   <!-- new slide -->
-  <div class="ms-slide">
+  <div class="ms-slide slide-2">
     <img src="/assets/img/features/bg_blue.jpg" data-src="/assets/img/features/bg_blue.jpg" alt="StoneAge waterblast tools background"/>  
 
     <div class="ms-layer feature-h1" style="font-size:400%;" 
@@ -144,7 +144,7 @@ landing: yes
   </div>  <!-- end of slide -->
   
   <!-- new slide
-  <div class="ms-slide">
+  <div class="ms-slide slide-3">
     <img src="/assets/img/features/bg_green.jpg" data-src="/assets/img/features/bg_green.jpg" alt="lorem ipsum dolor sit"/> 
 
     <div class="ms-layer feature-h1" style="width:400px;"
@@ -233,7 +233,7 @@ landing: yes
    end of slide -->
   
   <!-- new slide -->
-  <div class="ms-slide">
+  <div class="ms-slide slide-4">
     <img src="/assets/img/features/bg_gray.jpg" data-src="/assets/img/features/bg_gray.jpg" alt="StoneAge background"/> 
 
     <div class="ms-layer feature-h1" style="width:400px;"
@@ -313,7 +313,7 @@ landing: yes
   <!-- end of slide -->
   
   <!-- new slide -->
-  <div class="ms-slide">
+  <div class="ms-slide slide-5">
     <img src="/assets/img/features/bg_gold.jpg" data-src="/assets/img/features/bg_gold.jpg" alt="lorem ipsum dolor sit"/>  
 
     <div class="ms-layer feature-h1" style="width:400px;"
@@ -469,6 +469,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
+        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-new-regional-sales-manager">Stoneage Welcomes New West Coast Regional Sales Manager</a></h4>
+        <p>StoneAge is pleased to welcome Mike Johnson as West Coast Regional Sales Manager.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2018</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/ftp-abx-3l-v2">Product Launch: Updated ABX-3L</a></h4>
         <p>The new AutoBox ABX-3L is designed to handle even tougher jobs.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2018</small></p>
@@ -487,12 +492,7 @@ landing: yes
         <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-director-intl-sales">StoneAge Names New Director of International Sales</a></h4>
         <p>StoneAge is pleased to welcome Steve Johnson as Director of International Sales.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2018</small></p>
-      </li> 
-      <li>
-        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-vp-finance">StoneAge Welcomes VP of Finance and IT</a></h4>
-        <p>StoneAge is pleased to welcome Peter Brooks as Vice President of Finance and Information Technology.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2018</small></p>
-      </li> 
+      </li>  
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
