finish SANL, WT-12, add RMA checklist

--- a/index.html
+++ b/index.html
@@ -12,6 +12,83 @@ landing: yes
 <div class="master-slider ms-skin-default" id="homeslider">
   
   <!-- new slide -->
+  <div class="ms-slide slide-2">
+    <img src="/assets/img/features/bg_blue_sanl.jpg" data-src="/assets/img/features/bg_blue_sanl.jpg" alt="StoneAge waterblast tools background"/>  
+
+    <div class="ms-layer feature-h1" style="font-size:300%;" 
+      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="200" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-83" 
+      data-origin="ml" 
+      data-position="normal">StoneAge Netherlands
+    </div>
+
+    <div class="ms-layer" style="width:580px; font-size:150%;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1800" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="30" 
+      data-origin="ml" 
+      data-position="normal"   
+      data-masked="true">Join us October 1st &amp; 2nd for an Open House and introductory session of our new global training program.
+    </div>
+
+    <div class="ms-layer feature-h2"  
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="600" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-30" 
+      data-origin="ml" 
+      data-position="normal">
+      <span style="color:#d34b40; font-size:240%">Grand Opening Celebration!</span>
+    </div>
+
+    <a href="http://info.stoneagetools.com/sanl-grand-opening" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="1400" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">RSVP Now
+    </a>
+
+    <img  class="ms-layer" src="/assets/img/features/SANL_save_date.jpg" 
+         data-src="/assets/img/features/SANL_save_date.jpg" alt="StoneAge Rotterdam" style=""  
+         data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+         data-ease="easeOutQuint"       
+         data-parallax="160" 
+         data-type="image"          
+         data-offset-x="0" 
+         data-offset-y="0" 
+         data-origin="mr" 
+         data-position="normal" />
+
+<!--
+  <img class="ms-layer" src="/assets/img/features/sala-customer-day-2018-02.png" 
+       data-src="/assets/img/features/sala-customer-day-2018-02.png" alt="Visit StoneAge at IFAT 2018" style=""  
+       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)"   
+       data-ease="easeOutQuint"       
+       data-parallax="90" 
+       data-type="image"          
+       data-offset-x="320" 
+       data-offset-y="70" 
+       data-origin="mr" 
+       data-position="normal"
+     />
+-->
+  </div>  <!-- end of slide -->
+  
+  <!-- new slide -->
   <div class="ms-slide slide-1">
     <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/>  
 
@@ -65,83 +142,6 @@ landing: yes
     
   </div>
   <!-- end of slide -->
-  
-  <!-- new slide -->
-  <div class="ms-slide slide-2">
-    <img src="/assets/img/features/bg_blue.jpg" data-src="/assets/img/features/bg_blue.jpg" alt="StoneAge waterblast tools background"/>  
-
-    <div class="ms-layer feature-h1" style="font-size:400%;" 
-      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="200" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="-83" 
-      data-origin="ml" 
-      data-position="normal">StoneAge NL
-    </div>
-
-    <div class="ms-layer" style="width:280px;"
-      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="1800" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="30" 
-      data-origin="ml" 
-      data-position="normal"   
-      data-masked="true">Visit our new StoneAge Netherlands facility in Rotterdam for equipment sales, rentals, repairs, and support.
-    </div>
-
-    <div class="ms-layer feature-h2" style="width:328px;"   
-      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2400" 
-      data-delay="600" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="-30" 
-      data-origin="ml" 
-      data-position="normal">
-      Now Open!
-    </div>
-
-    <a href="/netherlands" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
-       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
-       data-duration="2400" 
-       data-delay="1400" 
-       data-ease="easeOutQuint"        
-       data-type="button"        
-       data-offset-x="150" 
-       data-offset-y="104" 
-       data-origin="ml" 
-       data-position="normal">More Info
-    </a>
-
-    <img  class="ms-layer" src="/assets/img/features/Rotterdam-building-01.png" 
-         data-src="/assets/img/features/Rotterdam-building-01.png" alt="StoneAge Rotterdam" style=""  
-         data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
-         data-ease="easeOutQuint"       
-         data-parallax="160" 
-         data-type="image"          
-         data-offset-x="-45" 
-         data-offset-y="90" 
-         data-origin="mr" 
-         data-position="normal" />
-
-<!--
-  <img class="ms-layer" src="/assets/img/features/sala-customer-day-2018-02.png" 
-       data-src="/assets/img/features/sala-customer-day-2018-02.png" alt="Visit StoneAge at IFAT 2018" style=""  
-       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)"   
-       data-ease="easeOutQuint"       
-       data-parallax="90" 
-       data-type="image"          
-       data-offset-x="320" 
-       data-offset-y="70" 
-       data-origin="mr" 
-       data-position="normal"
-     />
--->
-  </div>  <!-- end of slide -->
   
   <!-- new slide
   <div class="ms-slide slide-3">
@@ -469,6 +469,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
+        <h4><a href="http://news.stoneagetools.com/updated-mobile-app-better-experience">StoneAge Redesigns Mobile App</a></h4>
+        <p>The redesigned StoneAge app delivers a better mobile experience and easier access to product resources.<br>
+        <small><i class="fa fa-newspaper-o"></i> News, September 2018</small></p>
+      </li> 
+      <li>
         <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-new-regional-sales-manager">Stoneage Welcomes New West Coast Regional Sales Manager</a></h4>
         <p>StoneAge is pleased to welcome Mike Johnson as West Coast Regional Sales Manager.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2018</small></p>
@@ -487,11 +492,6 @@ landing: yes
         <h4><a href="http://news.stoneagetools.com/tool-obsolescence-bhk-100">Obsolescence Notice</a></h4>
         <p>Blackhawk BHK-100<br>
         <small><i class="fa fa-newspaper-o"></i> Bulletin, July 2018</small></p>
-      </li> 
-      <li>
-        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-director-intl-sales">StoneAge Names New Director of International Sales</a></h4>
-        <p>StoneAge is pleased to welcome Steve Johnson as Director of International Sales.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2018</small></p>
       </li>  
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
