--- a/loc-europe.html
+++ b/loc-europe.html
@@ -134,7 +134,7 @@ contact-uk: yes
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Johanna Spaeth</strong><br/>
+            <p><strong>Alison Berry</strong><br/>
               Main: +44 (0) 1684 892065<br/>
             <a href="mailto:Johanna.Spaeth@stoneagetools.com">johanna.spaeth@stoneagetools.com</a></p>
           </div>
