--- a/rentals.html
+++ b/rentals.html
@@ -294,7 +294,7 @@ master-slider: yes
             </div>
             <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwelve">
               <div class="panel-body">
-                <p>Yes, you can reserve StoneAge equipment for a scheduled job by contacting your local rental facility.</p>
+                <p>StoneAge equipment rentals are first come first serve basis. If you have a large project requiring an automated solution, please contact your local rental facility and an Automated Equipment Specialist will help you plan your project.</p>
               </div>
             </div>
           </div>
@@ -324,11 +324,11 @@ master-slider: yes
               <div class="panel-body">
                 <p>Yes, our purchase option provides an easy way to reduce overall capital investment when you want to add rented equipment to your fleet. You can receive credit equal to:
                 <ul>
-                  <li>100% of the paid rentals for a one-month rental</li>
-                  <li>90% of the paid rentals for a two-month rental</li>
-                  <li>80% of the paid rentals for a three-month rental</li>
-                  <li>70% of the paid rentals for a four-month rental</li>
-                  <li>60% of the paid rentals for rentals of five months or longer</li>
+                  <li>90% of the paid rentals for a one-month rental</li>
+                  <li>80% of the paid rentals for a two-month rental</li>
+                  <li>70% of the paid rentals for a three-month rental</li>
+                  <li>60% of the paid rentals for a four-month rental</li>
+                  <li>50% of the paid rentals for rentals of five months or longer</li>
                 </ul>
                 <p><a href="/assets/pdf/reference/rental_purchase_option_policy.pdf" target="_blank">Download the Purchase Option Policy Agreement</a> and return to your local rental facility.</p>
               </div>
