--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -321,7 +321,7 @@ landing: yes
         <div class="mix sm classic" data-name="wt">
           <a href="/wt" class="search-text">
             <img src="/assets/img/product/wt-02.jpg" class="img-responsive" />
-            <h3>WT-3/8-C</h3>
+            <h3>WT-3/8-C &amp; WT-1/2</h3>
             <h5>Negotiates elbows and laterals</h5>
             <table class="table">
               <tbody>
@@ -331,7 +331,7 @@ landing: yes
                 </tr>
                 <tr>
                   <th>Inlet</th>
-                  <td>3/8 NPT or BSPP</td>
+                  <td>3/8 NPT or BSPP, 1/2 NPT</td>
                 </tr>
               </tbody>
             </table>
